spectec/test/elab/neg/ctx-builtin-dec-redefined.t
  $ ./main.exe ctx-builtin-dec-redefined.spectec 2>&1
  error: dec `f` was already defined
    --> ctx-builtin-dec-redefined.spectec:4:14
    |
  4 | builtin dec $f : nat
    |              ^
    = source: elab
  [1]
